# blinky

./: pyproject.toml
firmware/blinky_ota/firmware/: sdkconfig  sdkconfig.old
firmware/blinky_ota/firmware/components/Blinky/: functions.cpp
firmware/blinky_ota/firmware/components/Blinky/include/: blinky_functions.h
firmware/blinky_ota/firmware/components/EVXAudioRecorder/: EVXAudioRecorder.cpp
firmware/blinky_ota/firmware/components/Signal/: corr.cpp  doa.cpp
firmware/blinky_ota/firmware/components/Signal/include/: corr.h  doa.h
firmware/blinky_ota/firmware/components/cereal/: component.mk
firmware/blinky_ota/firmware/components/tiny_dnn/: component.mk
firmware/blinky_ota/firmware/main/: config.h  otohikari.cpp
firmware/recorder/: sdkconfig  sdkconfig.old
firmware/recorder/main/: wifiparameter.h
simulation/: pyproject.toml
simulation/docs/: conf.py  index.rst
simulation/src/: mls.py
