[tool.poetry]
name = "simulation"
version = "0.0.1"
description = ""
authors = ["popura <popura.net@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
scipy = "^1.4.1"
Pillow = "^7.1.1"
matplotlib = "^3.2.1"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
Sphinx = "^3.0.0"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
